update requirements with versions

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-h5py
-numpy
-matplotlib
-pandas
-tqdm
-scikit-learn
+h5py>=2.1
+matplotlib>=2.0
+numpy>=1.0
+pandas>=2.2.2
+scikit-learn>=1.4.2
+scipy>=1.0
+tqdm>=4.66.4
